--- a/css/style.css
+++ b/css/style.css
@@ -1,60 +1,9 @@
+@import url("../css/reset.css");
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&family=Roboto+Condensed&display=swap");
-* {
-  margin: 0;
-  padding: 0;
-  border: 0;
-}
-
-*,
-*::before,
-*::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-html,
-body {
-  min-width: 320px;
-  height: 100%;
-  line-height: 1;
-}
-
-body {
-  font-family: "Roboto Condensed", sans-serif;
-  font-family: "Fira Sans", sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: normal;
-}
-
-ul li {
-  list-style: none;
-}
-
-img {
-  vertical-align: top;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: inherit;
-  font-size: inherit;
-}
-
-button {
-  line-height: inherit;
-  cursor: pointer;
-  color: inherit;
-  background-color: transparent;
+[class*=__container] {
+  max-width: 76.875rem;
+  padding: 0 0.625rem;
+  margin: 0 auto;
 }
 
 .wrapper {
@@ -68,32 +17,26 @@ button {
   min-height: 100vh;
 }
 
-.container {
-  max-width: 76.875rem;
-  padding: 0 0.9375rem;
-  margin: 0 auto;
+.phone {
+  font-size: 1.125rem;
+  color: #fefefe;
 }
 
 /* ------- Header ------- */
 .header {
   background-color: #332208;
-  color: #fefefe;
 }
 .header__inner {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  min-height: 6.375rem;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-}
-.header__number {
-  font-family: "Roboto Condensed";
-  font-size: 1.125rem;
+  min-height: 6.25rem;
 }
 
 .menu__list {
@@ -102,17 +45,84 @@ button {
   display: flex;
   gap: 1.875rem;
 }
-.menu__list-item {
-  font-family: "Roboto Condensed";
+.menu__list-link {
+  text-transform: uppercase;
+  color: #fefefe;
   font-size: 1.125rem;
+  padding-bottom: 0.3125rem;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+  border-bottom: 1px solid transparent;
+}
+.menu__list-link:hover {
+  border-bottom: 1px solid #fefefe;
 }
 
 /* ------- Header ------- */
 /* ------- Main ------- */
 .main {
+  min-height: 100vh;
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
+}
+
+/* -------------- */
+.main__section__container {
+  padding-top: 4rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.main__content {
+  padding-top: 4.6875rem;
+  text-align: center;
+}
+.main__content-title {
+  font-family: Fira Sans;
+  font-size: 3rem;
+  font-weight: 500;
+  margin-bottom: 1.25rem;
+}
+.main__content-text {
+  font-size: 1.5rem;
+  font-weight: 400;
+  margin-bottom: 3.125rem;
+}
+
+.main__content-items {
+  margin-top: 7.1875rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 3.125rem;
+}
+
+.main__content-item {
+  display: grid;
+  justify-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  gap: 16px;
+  padding: 14px 10px;
+  border: 1px solid #332208;
+}
+
+.content-item__text {
+  margin-top: 16px;
+}
+
+.app-link {
+  text-transform: uppercase;
+  display: inline-block;
+  padding: 1rem 1.1875rem;
+  background-color: #c5ac2d;
+  color: #fefefe;
+}
+
+/* -------------- */
+.main__slider-item {
+  text-align: center;
 }
 
 /* ------- Main ------- */
@@ -125,4 +135,3 @@ button {
 }
 
 /* ------- Footer ------- */
-/* -------------------- */
