--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,62 +1,17 @@
+@import url("../css/reset.css");
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&family=Roboto+Condensed&display=swap");
 $corporateСolor: #332208;
 $accentColor: #c5ac2d;
+$darkColor: #181818;
+$whiteColor: #fefefe;
 
-* {
-    margin: 0;
-    padding: 0;
-    border: 0;
-}
-
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-html,
-body {
-    min-width: 320px;
-    height: 100%;
-    line-height: 1;
-}
-
-body {
-    font-family: "Roboto Condensed", sans-serif;
-    font-family: "Fira Sans", sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: normal;
-}
-
-ul li {
-    list-style: none;
-}
-
-img {
-    vertical-align: top;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-weight: inherit;
-    font-size: inherit;
-}
-
-button {
-    line-height: inherit;
-    cursor: pointer;
-    color: inherit;
-    background-color: transparent;
+// body {
+//     font-family: "Fira Sans", sans-serif;
+// }
+[class*="__container"] {
+    max-width: 76.875rem;
+    padding: 0 0.625rem;
+    margin: 0 auto;
 }
 
 .wrapper {
@@ -65,42 +20,94 @@ button {
     min-height: 100vh;
 }
 
-.container {
-    max-width: 76.875rem;
-    padding: 0 0.9375rem;
-    margin: 0 auto;
+.phone {
+    font-size: 1.125rem;
+    color: $whiteColor;
 }
 /* ------- Header ------- */
 .header {
     background-color: $corporateСolor;
-    color: #fefefe;
     &__inner {
         display: flex;
-        min-height: 6.375rem;
         align-items: center;
         justify-content: space-between;
-    }
-    &__number {
-        font-family: "Roboto Condensed";
-        font-size: 1.125rem;
+        min-height: 6.25rem;
     }
 }
-
 .menu__list {
     display: flex;
     gap: 1.875rem;
-    &-item {
-        font-family: "Roboto Condensed";
+    &-link {
+        text-transform: uppercase;
+        color: $whiteColor;
         font-size: 1.125rem;
+        padding-bottom: 0.3125rem;
+        transition: all 0.4s;
+        border-bottom: 1px solid transparent;
+    }
+    &-link:hover {
+        border-bottom: 1px solid $whiteColor;
     }
 }
 /* ------- Header ------- */
 
 /* ------- Main ------- */
 .main {
+    min-height: 100vh;
     flex: 1 1 auto;
 }
+/* -------------- */
+.main__section__container {
+    padding-top: 4rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.main__content {
+    padding-top: 4.6875rem;
+    text-align: center;
+    &-title {
+        font-family: Fira Sans;
+        font-size: 3rem;
+        font-weight: 500;
+        margin-bottom: 1.25rem;
+    }
+    &-text {
+        font-size: 1.5rem;
+        font-weight: 400;
+        margin-bottom: 3.125rem;
+    }
+}
+.main__content-items {
+    margin-top: 7.1875rem;
+    display: flex;
+    gap: 3.125rem;
+}
+.main__content-item {
+    display: grid;
+    justify-items: center;
+    align-content: center;
+    gap: 16px;
+    padding: 14px 10px;
+    border: 1px solid $corporateСolor;
+}
+.content-item__text {
+    margin-top: 16px;
+}
+.app-link {
+    text-transform: uppercase;
+    display: inline-block;
+    padding: 1rem 1.1875rem;
+    background-color: $accentColor;
+    color: $whiteColor;
+}
+/* -------------- */
+.main__slider {
+    &-item {
+        text-align: center;
+    }
+}
 /* ------- Main ------- */
+
 /* ------- Footer ------- */
 .footer {
     background-color: $corporateСolor;
@@ -109,4 +116,3 @@ button {
     }
 }
 /* ------- Footer ------- */
-/* -------------------- */
