--- a/scss/style.scss
+++ b/scss/style.scss
@@ -82,9 +82,15 @@ $whiteColor: #fefefe;
     flex: 1 1 auto;
 }
 /* -------------- */
+.main__slider {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.main__section {
+    padding: 3.75rem 0 6.25rem;
+}
 .main__section__container {
-    height: 100vh;
-    padding: 3.75rem 0.625rem 6.25rem;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
@@ -185,7 +191,6 @@ $whiteColor: #fefefe;
 }
 
 .copy__items {
-    margin-top: 7.875rem;
     display: flex;
     gap: 1.25rem;
     justify-content: center;
@@ -195,6 +200,34 @@ $whiteColor: #fefefe;
     border-bottom: 1px solid black;
 }
 /* -------------- */
+.rent {
+    padding-bottom: 6.25rem;
+}
+.rent__inner {
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 50px;
+}
+.rent__content {
+    max-width: 300px;
+    p:nth-child(3) {
+        margin: 1.25rem 0 1.875rem;
+    }
+}
+.rent__title {
+    margin-bottom: 1.25rem;
+}
+.rent__items {
+    display: flex;
+    gap: 50px;
+}
+.rent__item {
+    max-width: 250px;
+    text-align: center;
+    border: 1px solid $corporateСolor;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
 /* -------------- */
 
 /* ------- Main ------- */
