--- a/scss/style.scss
+++ b/scss/style.scss
@@ -82,11 +82,7 @@ $whiteColor: #fefefe;
     flex: 1 1 auto;
 }
 /* -------------- */
-.main__slider {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
+
 .main__section {
     padding: 3.75rem 0 6.25rem;
 }
@@ -138,20 +134,23 @@ $whiteColor: #fefefe;
     line-height: 1.1875rem;
 }
 /* -------------- */
+.main__slider {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 .main__slider-container {
     position: relative;
     max-width: 37.5rem;
     height: 30.125rem;
     overflow: hidden;
 }
-
 .slides {
     display: flex;
     flex-direction: column;
     transition: transform 0.5s ease-in-out;
     height: 100%;
 }
-
 .slide {
     text-align: center;
     min-height: 30.125rem;
@@ -165,7 +164,6 @@ $whiteColor: #fefefe;
         font-family: Fira Sans;
     }
 }
-
 .pagination {
     position: absolute;
     display: flex;
@@ -176,7 +174,6 @@ $whiteColor: #fefefe;
     right: 0;
     transform: translateY(-50%);
 }
-
 .dot {
     width: 0.375rem;
     height: 0.375rem;
@@ -189,7 +186,6 @@ $whiteColor: #fefefe;
         background-color: #332208;
     }
 }
-
 .copy__items {
     display: flex;
     gap: 1.25rem;
@@ -201,35 +197,66 @@ $whiteColor: #fefefe;
 }
 /* -------------- */
 .rent {
-    padding-bottom: 6.25rem;
-}
-.rent__inner {
-    display: flex;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    gap: 50px;
-}
-.rent__content {
-    max-width: 300px;
-    p:nth-child(3) {
-        margin: 1.25rem 0 1.875rem;
+    padding: 6.25rem 0;
+    &__inner {
+        align-items: normal;
+        flex-wrap: wrap;
+        gap: 3.125rem;
     }
 }
-.rent__title {
-    margin-bottom: 1.25rem;
+.rent__content {
+    position: relative;
+    max-width: 18.75rem;
+    &-link {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+    }
 }
-.rent__items {
-    display: flex;
-    gap: 50px;
+.rent__text:nth-child(2) {
+    margin: 1.25rem 0;
 }
 .rent__item {
-    max-width: 250px;
+    padding: 0 1.875rem 0.625rem;
+    max-width: 15.625rem;
     text-align: center;
     border: 1px solid $corporateСolor;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    &-numb {
+        font-family: Fira Sans;
+        font-size: 6rem;
+        line-height: 7.1875rem;
+        color: $darkColor;
+        opacity: 0.05;
+    }
+    &-title {
+        min-height: 2.75rem;
+        font-family: Fira Sans;
+        font-size: 1.125rem;
+        line-height: 1.375rem;
+        margin: 0.9375rem 0 1.5625rem;
+    }
+    &-text {
+        height: 8.125rem;
+    }
 }
 /* -------------- */
 
+/* -------------- */
+.benefits {
+    padding: 6.25rem 0;
+    &__items {
+        display: flex;
+        align-items: center;
+    }
+}
+.benefits__list-item::after {
+    content: "";
+    background-color: #181818;
+    width: 16px;
+    height: 16px;
+}
+/* -------------- */
 /* ------- Main ------- */
 
 /* ------- Footer ------- */
