--- a/css/style.css
+++ b/css/style.css
@@ -140,17 +140,22 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 1rem;
-  min-height: 150px;
-  max-width: 150px;
+  min-height: 9.375rem;
+  max-width: 9.375rem;
   padding: 0.875rem 0.625rem;
   border: 1px solid #332208;
   -webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  -webkit-transition: all 0.6s;
+  transition: all 0.6s;
+  cursor: pointer;
 }
 .main__content-item:hover {
   -webkit-transform: scale(1.1);
@@ -161,6 +166,7 @@
 }
 
 .content-item__text {
+  min-height: 4.75rem;
   line-height: 1.1875rem;
 }
 
@@ -292,7 +298,7 @@
 }
 
 .rent__item {
-  padding: 0 1.875rem 0.625rem;
+  padding: 0 1.875rem 1.125rem;
   max-width: 15.625rem;
   text-align: center;
   border: 1px solid #332208;
@@ -323,19 +329,70 @@
   padding: 6.25rem 0;
 }
 .benefits__items {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  margin-top: 1.25rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
+.benefits__list {
+  width: 18.75rem;
+}
+.benefits__list-item {
+  position: relative;
+}
+.benefits__list-item:first-child, .benefits__list-item:last-child {
+  padding-left: 4.375rem;
+}
+.benefits__list-item:nth-child(2), .benefits__list-item:nth-child(6) {
+  padding-left: 2.875rem;
+}
+.benefits__list-item:nth-child(3), .benefits__list-item:nth-child(5) {
+  padding-left: 1.375rem;
+}
+.benefits__list-item:not(:last-child) {
+  margin-bottom: 1.75rem;
+}
+
 .benefits__list-item::after {
   content: "";
+  position: absolute;
+  margin-left: 0.625rem;
   background-color: #181818;
-  width: 16px;
-  height: 16px;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+}
+
+.benefits__img {
+  max-width: 600px;
+}
+
+.benefits__content {
+  min-width: 18.75rem;
+  text-align: end;
+}
+
+.benefits__content *:not(:last-child) {
+  margin-bottom: 1.875rem;
+}
+
+.video-popup {
+  display: inline-block;
+  text-transform: uppercase;
+  background-color: #c5ac2d;
+  color: #fefefe;
+  padding: 0.375rem 2.125rem;
+  border: 1px solid transparent;
+  -webkit-transition: all ease 0.4s;
+  transition: all ease 0.4s;
+}
+.video-popup:hover {
+  color: #c5ac2d;
+  background-color: #fefefe;
+  border: 1px solid #c5ac2d;
 }
 
 /* -------------- */
