--- a/scss/style.scss
+++ b/scss/style.scss
@@ -118,19 +118,23 @@ $whiteColor: #fefefe;
 .main__content-item {
     display: flex;
     align-items: center;
+    justify-content: space-around;
     flex-direction: column;
     gap: 1rem;
-    min-height: 150px;
-    max-width: 150px;
+    min-height: 9.375rem;
+    max-width: 9.375rem;
     padding: 0.875rem 0.625rem;
     border: 1px solid #332208;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    transition: all 0.6s;
+    cursor: pointer;
     &:hover {
         transform: scale(1.1);
         transition: all 0.6s;
     }
 }
 .content-item__text {
+    min-height: 4.75rem;
     line-height: 1.1875rem;
 }
 /* -------------- */
@@ -217,7 +221,7 @@ $whiteColor: #fefefe;
     margin: 1.25rem 0;
 }
 .rent__item {
-    padding: 0 1.875rem 0.625rem;
+    padding: 0 1.875rem 1.125rem;
     max-width: 15.625rem;
     text-align: center;
     border: 1px solid $corporateСolor;
@@ -246,15 +250,65 @@ $whiteColor: #fefefe;
 .benefits {
     padding: 6.25rem 0;
     &__items {
-        display: flex;
+        margin-top: 1.25rem;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
         align-items: center;
+    }
+}
+.benefits__list {
+    width: 18.75rem;
+    &-item {
+        position: relative;
+    }
+    &-item:first-child,
+    &-item:last-child {
+        padding-left: 4.375rem;
+    }
+    &-item:nth-child(2),
+    &-item:nth-child(6) {
+        padding-left: 2.875rem;
+    }
+    &-item:nth-child(3),
+    &-item:nth-child(5) {
+        padding-left: 1.375rem;
+    }
+    &-item:not(:last-child) {
+        margin-bottom: 1.75rem;
     }
 }
 .benefits__list-item::after {
     content: "";
+    position: absolute;
+    margin-left: 0.625rem;
     background-color: #181818;
-    width: 16px;
-    height: 16px;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+}
+.benefits__img {
+    max-width: 600px;
+}
+.benefits__content {
+    min-width: 18.75rem;
+    text-align: end;
+}
+.benefits__content *:not(:last-child) {
+    margin-bottom: 1.875rem;
+}
+.video-popup {
+    display: inline-block;
+    text-transform: uppercase;
+    background-color: $accentColor;
+    color: $whiteColor;
+    padding: 0.375rem 2.125rem;
+    border: 1px solid transparent;
+    transition: all ease 0.4s;
+    &:hover {
+        color: $accentColor;
+        background-color: $whiteColor;
+        border: 1px solid $accentColor;
+    }
 }
 /* -------------- */
 /* ------- Main ------- */
