--- a/css/style.css
+++ b/css/style.css
@@ -359,11 +359,12 @@
 .benefits__list-item::after {
   content: "";
   position: absolute;
+  top: 0.125rem;
   margin-left: 0.625rem;
-  background-color: #181818;
   width: 1rem;
   height: 1rem;
   border-radius: 50%;
+  background-color: #181818;
 }
 
 .benefits__img {
@@ -371,8 +372,10 @@
 }
 
 .benefits__content {
-  min-width: 18.75rem;
-  text-align: end;
+  text-align: right;
+}
+.benefits__content__text {
+  padding-left: 38px;
 }
 
 .benefits__content *:not(:last-child) {
@@ -380,11 +383,13 @@
 }
 
 .video-popup {
+  position: relative;
   display: inline-block;
   text-transform: uppercase;
+  text-align: left;
   background-color: #c5ac2d;
   color: #fefefe;
-  padding: 0.375rem 2.125rem;
+  padding: 0.375rem 2.125rem 0.375rem 4rem;
   border: 1px solid transparent;
   -webkit-transition: all ease 0.4s;
   transition: all ease 0.4s;
@@ -393,6 +398,93 @@
   color: #c5ac2d;
   background-color: #fefefe;
   border: 1px solid #c5ac2d;
+}
+.video-popup::before {
+  content: "";
+  background-image: url("../images/main/video-btn.svg");
+  position: absolute;
+  width: 1.5625rem;
+  height: 1.5625rem;
+  left: 2rem;
+  top: 26%;
+}
+.video-popup:hover::before {
+  content: "";
+  background-image: url("../images/main/video__btn-hover.svg");
+  position: absolute;
+  width: 1.5625rem;
+  height: 1.5625rem;
+  left: 2rem;
+  top: 26%;
+}
+
+/* -------------- */
+/* -------------- */
+.reviews {
+  color: #fefefe;
+  padding: 100px 0;
+  margin-bottom: 10px;
+  background-color: #332208;
+}
+
+.swiper-container {
+  position: relative;
+  overflow: hidden;
+  padding: 70px 0 60px;
+}
+
+.swiper-slide {
+  height: 300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  gap: 3.125rem;
+  text-align: center;
+  padding: 2.8125rem 1.5625rem;
+  border: 1px solid #c5ac2d;
+  -webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.swiper-pagination {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0.625rem;
+  position: absolute;
+  bottom: 0.625rem;
+  left: 0;
+  width: 100%;
+}
+
+span.swiper-pagination-bullet {
+  width: 0.5rem;
+  height: 0.5rem;
+  display: inline-block;
+  background-color: #c5ac2d;
+  margin: 0 0.5rem;
+  border-radius: 50%;
+  opacity: 0.7;
+  cursor: pointer;
+}
+
+span.swiper-pagination-bullet-active {
+  width: 1rem;
+  height: 1rem;
+  opacity: 1;
 }
 
 /* -------------- */
