--- a/scss/style.scss
+++ b/scss/style.scss
@@ -280,28 +280,33 @@ $whiteColor: #fefefe;
 .benefits__list-item::after {
     content: "";
     position: absolute;
+    top: 0.125rem;
     margin-left: 0.625rem;
-    background-color: #181818;
     width: 1rem;
     height: 1rem;
     border-radius: 50%;
+    background-color: #181818;
 }
 .benefits__img {
     max-width: 600px;
 }
 .benefits__content {
-    min-width: 18.75rem;
-    text-align: end;
+    text-align: right;
+    &__text {
+        padding-left: 38px;
+    }
 }
 .benefits__content *:not(:last-child) {
     margin-bottom: 1.875rem;
 }
 .video-popup {
+    position: relative;
     display: inline-block;
     text-transform: uppercase;
+    text-align: left;
     background-color: $accentColor;
     color: $whiteColor;
-    padding: 0.375rem 2.125rem;
+    padding: 0.375rem 2.125rem 0.375rem 4rem;
     border: 1px solid transparent;
     transition: all ease 0.4s;
     &:hover {
@@ -309,6 +314,74 @@ $whiteColor: #fefefe;
         background-color: $whiteColor;
         border: 1px solid $accentColor;
     }
+    &::before {
+        content: "";
+        background-image: url("../images/main/video-btn.svg");
+        position: absolute;
+        width: 1.5625rem;
+        height: 1.5625rem;
+        left: 2rem;
+        top: 26%;
+    }
+    &:hover::before {
+        content: "";
+        background-image: url("../images/main/video__btn-hover.svg");
+        position: absolute;
+        width: 1.5625rem;
+        height: 1.5625rem;
+        left: 2rem;
+        top: 26%;
+    }
+}
+/* -------------- */
+
+/* -------------- */
+.reviews {
+    color: $whiteColor;
+    padding: 100px 0;
+    margin-bottom: 10px;
+    background-color: $corporateСolor;
+}
+.swiper-container {
+    position: relative;
+    overflow: hidden;
+    padding: 70px 0 60px;
+}
+.swiper-slide {
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 3.125rem;
+    text-align: center;
+    padding: 2.8125rem 1.5625rem;
+    border: 1px solid #c5ac2d;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+.swiper-pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.625rem;
+    position: absolute;
+    bottom: 0.625rem;
+    left: 0;
+    width: 100%;
+}
+span.swiper-pagination-bullet {
+    width: 0.5rem;
+    height: 0.5rem;
+    display: inline-block;
+    background-color: #c5ac2d;
+    margin: 0 0.5rem;
+    border-radius: 50%;
+    opacity: 0.7;
+    cursor: pointer;
+}
+span.swiper-pagination-bullet-active {
+    width: 1rem;
+    height: 1rem;
+    opacity: 1;
 }
 /* -------------- */
 /* ------- Main ------- */
